--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
     - main
+    - Google-preemptible
   pull_request:
     branches:
     - main
+    - Google-preemptible
 
 jobs:
   scanning:
